# django-advanced-wallet

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  static.yml
django_advanced_wallet/: admin.py  app_settings.py  apps.py  errors.py  forms.py  managers.py  models.py
django_advanced_wallet/migrations/: 0001_initial.py
django_advanced_wallet/templates/admin/django_advanced_wallet/form/: new-operation.html
docs/: run.cmd
docs/source/: api_reference.rst  conf.py  django_advanced_wallet.migrations.rst  django_advanced_wallet.rst  faq.rst  index.rst  installation.rst  introduction.rst  modules.rst  usage.rst
example_app/: manage.py
example_app/app/: asgi.py  settings.py  urls.py  wsgi.py
example_app/tests/: apps.py  models.py  tests.py
